name:                bytestring-to-vector
version:             0.2
license:             BSD3
license-file:        LICENSE
synopsis:            Convert between ByteString and Vector.Storable without copying
category:            Data Structures
author:              Sven Heyll <sven.heyll@gmail.com>, Keegan McAllister <mcallister.keegan@gmail.com> 
maintainer:          Sven Heyll <sven.heyll@gmail.com>
build-type:          Simple
cabal-version:       >=1.10
description:
  This library is a fork of the @spool@ package written by Keegan McAllister.  
  .
  This library allows conversion between the types from @Data.ByteString@
  (package @bytestring@) and @Data.Vector.Storable@ (package @vector@) without
  copying the underlying data.  This is useful, for example, when @ByteString@
  IO produces or consumes vectors of numbers in native byte order.
  .
  The conversion relies on the fact that @ByteString@ and @Vector@ use their
  respective @ForeignPtr@s in compatible ways. 

extra-source-files:
  README.md, stack.yaml, LICENSE

library
  exposed-modules:  Data.Vector.Storable.ByteString
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base       >= 3 && < 5
    , bytestring
    , vector   

source-repository head
    type:     git
    location: git://github.com/sheyll/bytestring-to-vector.git

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:
      base >= 3 && < 5
    , byteorder
    , bytestring-to-vector
    , bytestring
    , vector
    , QuickCheck
 
